feat: clean compile OK with jdk 27 EA